<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

		<EditText
			android:id="@+id/searchFilter"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="Type template..." />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/list"
			android:layout_width="fill_parent"
			android:layout_weight="1"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/list_empty"
			android:layout_width="fill_parent"
			android:layout_height="?android:attr/listPreferredItemHeight"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/no_transactions" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/ButtonBar">

			<Button
				android:id="@+id/bEditTemplates"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/edit" />

			<ImageButton
				android:id="@+id/bMinus"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/MinusButton"
				android:layout_marginLeft="10dp"
				android:layout_marginStart="10dp" />

			<TextView
				android:id="@+id/multiplier"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="x1"
				android:textStyle="bold"
				android:textColor="#ffffff" />

			<ImageButton
				android:id="@+id/bPlus"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/PlusButton"
				android:layout_marginRight="10dp"
				android:layout_marginEnd="10dp" />

			<Button
				android:id="@+id/bCancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/cancel" />

		</LinearLayout>

	</LinearLayout>

</layout>