<layout xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

		<LinearLayout
			android:id="@+id/topBar"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<Button
				android:id="@+id/bQrCode"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="QRCode: 0" />

			<Button
				android:id="@+id/bCheckStatus"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="Check: 0" />

			<Button
				android:id="@+id/bRequestStatus"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="Request: 0" />

		</LinearLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/list"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<TextView
			android:id="@+id/list_empty"
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/no_items" />

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:id="@+id/defaultBottomBar"
				style="@style/BottomBar"
				android:layout_width="match_parent">

				<Button
					android:id="@+id/bDelete"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/delete" />

				<Button
					android:id="@+id/bBack"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/back" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/selectionBottomBar"
				style="@style/BottomBar"
				android:layout_width="match_parent"
				android:visibility="gone">

				<ImageButton
					android:id="@+id/bCheckAll"
					style="@style/BottomBarButton"
					android:src="@drawable/ic_select_all" />

				<ImageButton
					android:id="@+id/bUncheckAll"
					style="@style/BottomBarButton"
					android:src="@drawable/ic_clear" />

				<TextView
					android:id="@+id/selectionCount"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_margin="4dp"
					android:gravity="right|center"
					android:padding="10dp"
					android:textStyle="bold" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="right">

					<ImageButton
						android:id="@+id/bOK"
						style="@style/BottomBarButton"
						android:src="@drawable/ic_action_tick"
						android:tint="#FFFFFF" />

				</LinearLayout>

			</LinearLayout>

		</FrameLayout>

	</LinearLayout>

</layout>